<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="@string/login"/>

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/enter_your_email" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword" />

    <!-- Button for Login with text "Login" -->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="150dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/register"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_text"
        android:layout_height="wrap_content"/>

</LinearLayout>